# XDeck

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md
crates/daemon/: Cargo.toml
crates/daemon/migrations/: 001_initial.sql  20260302000000_process_enhancements.sql  20260304000000_multi_instance.sql  20260305000000_process_pty_mode.sql  20260308000000_snippets.sql  20260308000001_snippet_execution_mode.sql  20260309000000_snippet_store.sql  20260310000000_snippet_version_tracking.sql  20260311000000_docker_compose.sql  20260315000000_upload_sessions.sql  20260325000000_process_schedules.sql  20260330000000_process_runtime_instances.sql  20260331000000_rename_auto_start_to_enabled.sql
crates/daemon/src/: config.rs  error.rs  main.rs
crates/daemon/src/api/: file_transfer.rs  mod.rs  pty_websocket.rs  websocket.rs
crates/daemon/src/db/: migrations.rs  mod.rs
crates/daemon/src/rpc/: auth_handlers.rs  docker_handlers.rs  event_handlers.rs  fs_handlers.rs  mod.rs  params.rs  process_handlers.rs  process_params.rs  pty_handlers.rs  router.rs  snippet_handlers.rs  snippet_store_handlers.rs  system_handlers.rs  task_handlers.rs  types.rs
crates/daemon/src/services/: auth.rs  docker_manager.rs  event_bus.rs  file_manager.rs  mod.rs  process_manager.rs  pty_manager.rs  system_monitor.rs  task_manager.rs  upload_manager.rs
crates/daemon/src/services/docker_manager/: compose.rs  connection.rs  containers.rs  images.rs  manager.rs  mod.rs  networks.rs  tests.rs  types.rs
crates/daemon/src/services/file_manager/: metadata.rs  mod.rs  operations.rs  path_safety.rs  types.rs
crates/daemon/src/services/process_manager/: lifecycle.rs  log_utils.rs  logs.rs  manager.rs  mod.rs  runtime.rs  schedule.rs  storage.rs  tests.rs  types.rs
crates/daemon/src/services/pty_manager/: manager.rs  mod.rs  runtime.rs  session.rs  tests.rs  types.rs
crates/daemon/src/services/task_manager/: manager.rs  mod.rs  tests.rs  types.rs
crates/daemon/src/services/upload_manager/: helpers.rs  manager.rs  mod.rs  models.rs  tests.rs
docs/: ADD.md  PRD.md  PROCESS_SCHEDULE_INTEGRATION.md  PTY_ADD.md
snippets/: docker-install-linux-deb.sh  docker-install-linux-rpm.sh  docker-install-macos.sh  docker-install-windows.ps1  index.json  podman-install-linux-deb.sh  podman-install-linux-rpm.sh  podman-install-macos.sh  podman-install-windows.ps1
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/app/: app.css  root.tsx  routes.ts
web/app/components/: app-header.tsx  app-sidebar.tsx  connection-status.tsx  path-picker.tsx  responsive-modal.tsx
web/app/hooks/: use-context-menu-guard.ts  use-mobile.ts  use-snippet-sidebar.ts  use-touch-drag-select.ts
(+81 files in other folders)
