[workspace]
resolver = "2"
members = [
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Orange"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# System info
sysinfo = "0.33"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nutype = "0.6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
dashmap = "6"
rand = "0.8"
dirs = "6"
base64 = "0.22"
bytes = "1"
portable-pty = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# System utilities
which = "7"
libc = "0.2"
