[package]
name = "xdeck-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XDeck daemon - lightweight service management panel"

[[bin]]
name = "xdeck-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Auth
argon2.workspace = true
jsonwebtoken.workspace = true

# System info
sysinfo.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
nutype.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dashmap.workspace = true
rand.workspace = true
dirs.workspace = true
base64.workspace = true
bytes.workspace = true
portable-pty.workspace = true

# CLI
clap.workspace = true

# WebSocket
futures-util = "0.3"
tokio-stream = "0.1"

# HTTP client
reqwest.workspace = true

# Docker
bollard.workspace = true

# System utilities
which.workspace = true
libc.workspace = true

# File transfer
tokio-util.workspace = true
mime_guess.workspace = true

# Compression
zip.workspace = true
flate2.workspace = true
tar.workspace = true
